# Intelligent-Timetable-Generator-with-Genetic-Algorithm

./: main.py  pyproject.toml
